Mon Apr 16 22:08:07 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqlodbc.c ODBC3 conformant 

Sun Apr 15 10:01:36 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix leak

Fri Apr 13 17:27:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: cursor update

Fri Apr 13 17:22:25 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/query.c:
	- add cursor update to libTDS

Fri Apr 13 10:08:07 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqlodbc.c:
	- catch all error
	- fix some memory problems

Thu Apr 12 15:33:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/funccall.c:
	- add test from ML

Thu Apr 12 15:07:09 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* freetds.spec.in: fix odbc directory
	* src/dblib/unittests/Makefile.am: fix for make distcheck
	* src/odbc/unittests/raiserror.c src/odbc/unittests/warning.c:
	- relax if dm used

Thu Apr 12 09:47:39 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/copydesc.c:
	- test and fix a problem with SQLAllocHandle
	* src/odbc/unittests/connect2.c: add test for not existing dbs

Thu Apr 12 09:05:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/array_bind.c src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/ct_diagclient.c:
	- fix buffer overflow leading in core

Wed Apr 11 14:55:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/odbc/unittests/common.c:
	- remove warning compiling with MingW

Wed Apr 11 13:52:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c src/odbc/odbc.c:
	* src/odbc/unittests/connect2.c:
	- finish and fix test for change_database

Wed Apr 11 11:47:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/connect2.c: fix test
	* src/odbc/unittests/describecol.in: relax test
