@@ -54,7 +54,7 @@ extern "C"
 #endif
 #endif
 
-/* $Id: tdsodbc.h,v 1.95 2007-04-10 14:00:17 freddy77 Exp $ */
+/* $Id: tdsodbc.h,v 1.96 2007-04-18 14:29:24 freddy77 Exp $ */
 
 #if defined(__GNUC__) && __GNUC__ >= 4
 #pragma GCC visibility push(hidden)
@@ -459,8 +459,8 @@ void odbc_check_desc_extra(TDS_DESC * desc);
  */
 int odbc_set_stmt_query(struct _hstmt *stmt, const char *sql, int sql_len);
 int odbc_set_stmt_prepared_query(struct _hstmt *stmt, const char *sql, int sql_len);
-void odbc_set_return_status(struct _hstmt *stmt);
-void odbc_set_return_params(struct _hstmt *stmt);
+void odbc_set_return_status(struct _hstmt *stmt, unsigned int n_row);
+void odbc_set_return_params(struct _hstmt *stmt, unsigned int n_row);
 
 SQLSMALLINT odbc_server_to_sql_type(int col_type, int col_size);
 int odbc_sql_to_c_type_default(int sql_type);
@@ -471,7 +471,7 @@ void odbc_set_sql_type_info(TDSCOLUMN * col, struct _drecord *drec, SQLINTEGER o
 SQLINTEGER odbc_sql_to_displaysize(int sqltype, TDSCOLUMN *col);
 int odbc_get_string_size(int size, SQLCHAR * str);
 void odbc_rdbms_version(TDSSOCKET * tds_socket, char *pversion_string);
-SQLINTEGER odbc_get_param_len(const struct _drecord *drec_apd, const struct _drecord *drec_ipd);
+SQLINTEGER odbc_get_param_len(const struct _drecord *drec_axd, const struct _drecord *drec_ixd, const TDS_DESC* axd, unsigned int n_row);
 
 SQLRETURN odbc_set_string(SQLPOINTER buffer, SQLSMALLINT cbBuffer, SQLSMALLINT FAR * pcbBuffer, const char *s, int len);
 SQLRETURN odbc_set_string_i(SQLPOINTER buffer, SQLINTEGER cbBuffer, SQLINTEGER FAR * pcbBuffer, const char *s, int len);
@@ -494,7 +494,7 @@ const char *parse_const_param(const char * s, TDS_SERVER_TYPE *type);
 /*
  * sql2tds.c
  */
-SQLRETURN sql2tds(TDS_STMT * stmt, const struct _drecord *drec_ipd, const struct _drecord *drec_apd, TDSCOLUMN *curcol, int compute_row);
+SQLRETURN sql2tds(TDS_STMT * stmt, const struct _drecord *drec_ixd, const struct _drecord *drec_axd, TDSCOLUMN *curcol, int compute_row, const TDS_DESC* axd, unsigned int n_row);
 
 #if defined(__GNUC__) && __GNUC__ >= 4
 #pragma GCC visibility pop
