@@ -43,7 +43,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: prepare_query.c,v 1.63 2007-04-04 09:54:34 freddy77 Exp $");
+TDS_RCSID(var, "$Id: prepare_query.c,v 1.64 2007-04-18 14:29:24 freddy77 Exp $");
 
 #define TDS_ISSPACE(c) isspace((unsigned char) (c))
 
@@ -171,7 +171,7 @@ prepared_rpc(struct _hstmt *stmt, int compute_row)
 
 			switch (sql2tds
 				(stmt, &stmt->ipd->records[stmt->param_num - 1], &stmt->apd->records[stmt->param_num - 1],
-				 curcol, compute_row)) {
+				 curcol, compute_row, stmt->apd, stmt->curr_param_row)) {
 			case SQL_ERROR:
 				return SQL_ERROR;
 			case SQL_NEED_DATA:
@@ -215,7 +215,7 @@ parse_prepared_query(struct _hstmt *stmt, int compute_row)
 
 		switch (sql2tds
 			(stmt, &stmt->ipd->records[stmt->param_num - 1], &stmt->apd->records[stmt->param_num - 1],
-			 stmt->params->columns[nparam], compute_row)) {
+			 stmt->params->columns[nparam], compute_row, stmt->apd, stmt->curr_param_row)) {
 		case SQL_ERROR:
 			return SQL_ERROR;
 		case SQL_NEED_DATA:
